## CERTI doc/Makefile.am
## Copyright (C) 2002 ONERA
## $Id: Makefile.am,v 3.0 2002/11/21 01:27:51 breholee Exp $
##
## Process this file with automake to produce Makefile.in

# @configure_input@

docdir = $(prefix)/share/doc
doc_DATA = index.html certi.html ## install.fr.html

EXTRA_DIST = certi.html index.html ## install.fr.html

## $Id: Makefile.am,v 3.0 2002/11/21 01:27:51 breholee Exp $
