## CERTI doc/Makefile.am
## Copyright (C) 2002-2005 ONERA
## $Id: Makefile.am,v 3.1 2005/05/05 20:04:49 breholee Exp $
##
## Process this file with automake to produce Makefile.in

# @configure_input@

docdir = $(prefix)/share/doc
doc_DATA = index.html certi.html install.txt

EXTRA_DIST = certi.html index.html install.txt

## $Id: Makefile.am,v 3.1 2005/05/05 20:04:49 breholee Exp $
